[package]
name = "rtea"
version = "0.2.0"
authors = ["John Rollinson <code@jrolli.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jrolli/rtea"
documentation = "https://docs.rs/rtea/"
description = "Makes writing Tcl extensions in Rust ergonomic."
readme = "README.md"
keywords = ["tcl", "tea", "rust"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
rtea-proc = { path = "rtea-proc", version = "2.0.0" }
