[package]
name = "rtea-proc"
version = "2.0.0"
authors = ["John Rollinson <code@jrolli.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jrolli/rtea"
documentation = "https://docs.rs/rtea-proc/"
description = "Internal macro crate for rtea."
readme = "README.md"
edition = "2018"

[lib]
proc_macro = true
doctest = false
